--- a/templates/home.html
+++ b/templates/home.html
@@ -1,55 +1,26 @@
 {% extends 'base.html' %}
 {% block title %}Home.html{% endblock title %}
 {% block body %}
-    {% block nav %}
-    <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-        <span class="navbar-brand">Navbar</span>
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">All Songs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">PlayList</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav">
-                {% if user.is_authenticated %}
-                    <span class='navbar-text'>Welcome {{ user.email }}</span>
-                    <li>
-                        <a class="nav-link" href="/accounts/logout">Logout</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/accounts/login">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/accounts/signup">SignUp</a>
-                    </li>
-                {% endif %}    
-            </ul>
-        </div>
-    </nav>
-    {% endblock nav %}
-    
-    {% block search %}
+    {% include "nav.html" %}
+    {% comment %} {% block search %}
     <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
-    {% endblock search %}
+    {% endblock search %} {% endcomment %}
+
+    {% comment %} {% if messages %}
+        {% include messages.html %}
+    {% endif %} {% endcomment %}
+
 
     {% block content %}
 
     {% endblock content %}
 
+    {% comment %} <footer>
     {% block footer %}
     
     {% endblock footer %}
+    </footer> {% endcomment %}
 {% endblock body %}
