--- a/musicapp/templates/musicapp/index.html
+++ b/musicapp/templates/musicapp/index.html
@@ -1,1 +1,20 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
+
+{% block body %}
+
+{% include 'nav.html' %}
+
+
+<div class="container">
+    {% include 'search.html' %}
+    <a href="/all_songs">All Songs</a>
+    <a href="/hindi_songs">Hindi Songs</a>
+    <a href="/english_songs">English Songs</a>
+</div>
+
+
+{% if last_played %}
+    {% include 'footer.html' with song=last_played %}
+{% endif %}
+
+{% endblock body %}
