--- a/musicapp/templates/musicapp/details.html
+++ b/musicapp/templates/musicapp/details.html
@@ -3,21 +3,6 @@
 {% block body %}
 {% include "nav.html" %}
 
-{% comment %} {% if messages %}
-<ul class="messages" style="width: 600px;margin-left:400px">
-    {% for message in messages %}
-    <div class="alert alert-success">
-        <strong>Success!</strong> {{message}}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {% endfor %}
-</ul>
-{% endif %} {% endcomment %}
-
-
-
 <br>
 <div class="container">
     <div class="card">
@@ -111,25 +96,9 @@
     </div>
 </div>
 
-{% comment %} <footer class="footer">
-    <div class="player" style="padding-left: 10px;padding-top:10px;background-color: #459dfb;">
-        <div class="left"><img src="{{last_played.song_img.url}}" height="90" width="90"
-                style="border-radius: 10px 10px 10px 10px;"></div>
-        <div class="right">
-            <div class="top">
-                <a class="song" style="margin-left: 15px;color: white;">{{last_played.name}}</a>
-                <a class="artist" style="margin-left: 15px;color:white">{{last_played.album}}</a>
-            </div>
-            <div class="bottom">
-                <audio controls="" _autoplay="" name="media"
-                    style="margin-left: 20px;margin-bottom: 10px;width: 1245px;height:30px">
-                    <source src="{{last_played.song_file.url}}" type="audio/mpeg"></audio>
-            </div>
-        </div>
-    </div>
-</footer> {% endcomment %}
-
-{% include "footer.html" %}
+{% if last_played %}
+    {% include 'footer.html' with song=last_played %}
+{% endif %}
 
 {% endblock body %}
 
