--- a/templates/nav.html
+++ b/templates/nav.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="/accounts/login">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/accounts/signup">SignUp</a>
+                    <a class="nav-link" href="/accounts/register">SignUp</a>
                 </li>
             {% endif %} 
         </ul>
