--- a/musicapp/templates/musicapp/details.html
+++ b/musicapp/templates/musicapp/details.html
@@ -1,104 +1,111 @@
 {% extends 'base.html' %}
 {% block title %} Detail {% endblock title %}
 {% block body %}
-{% include "nav.html" %}
-
-<br>
-<div class="container">
-    <div class="card">
-        <div class="container-fliud">
-            <div class="wrapper row">
-                <div class="preview col-md-5">
-                    <div class="preview-pic tab-content">
-                        <div class="tab-pane active"><img src="{{songs.thumbnail.url}}" height="300" width="300"
-                                style="padding:20px;border-radius: 60px 60px 60px 60px;"></div>
+    {% include "nav.html" %}
+    {% include "messages.html" %}
+    <br>
+    <div class="container">
+        <div class="card">
+            <div class="container-fliud">
+                <div class="wrapper row">
+                    <div class="preview col-md-5">
+                        <div class="preview-pic tab-content">
+                            <div class="tab-pane active"><img src="{{ songs.thumbnail.url }}" height="300" width="300"
+                                                              style="padding:20px;border-radius: 60px 60px 60px 60px;">
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="details col-md-6">
-                    <br>
-                    <h3 class="product-title">{{songs.name}}</h3>
-                    <h6>Album: {{songs.album}}</h6>
-                    <h6>Artist: {{songs.artist}}</h6>
-                    <h6>Release Year: {{ songs.year }}</h6>
-                    <br>
-                    <!-- <audio controls>
+                    <div class="details col-md-6">
+                        <br>
+                        <h3 class="product-title">{{ songs.name }}</h3>
+                        <h6>Album: {{ songs.album }}</h6>
+                        <h6>Artist: {{ songs.artist }}</h6>
+                        <h6>Release Year: {{ songs.year }}</h6>
+                        <br>
+                        <!-- <audio controls>
                         <source src="{{ songs.song_file.url }}" type="audio/mpeg">
                     </audio>   -->
 
-                    <form method="post">
-                        {% csrf_token %}
-                        <button style="float: left;" type="button" class="btn btn-primary" data-toggle="modal"
-                            data-target="#exampleModal" data-whatever="@mdo"><i class="fa fa-plus" aria-hidden="true"></i> Create New Playlist</button>
-                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-                            aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">New Playlist</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
+                        <form method="post">
+                            {% csrf_token %}
+                            <button style="float: left;" type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#exampleModal" data-whatever="@mdo"><i class="fa fa-plus"
+                                                                                        aria-hidden="true"></i> Create
+                                New Playlist
+                            </button>
+                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
                                     <div class="modal-content">
-                                        <form>
-                                            <div class="form-group">
-                                                <label for="recipient-name" class="col-form-label">Name</label>
-                                                <input type="text" class="form-control" id="recipient-name"
-                                                    name="playlist">
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                            data-dismiss="modal">Close</button>
-                                        <button type="Submit" class="btn btn-primary">Create Playlist</button>
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">New Playlist</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-content">
+                                            <form>
+                                                <div class="form-group">
+                                                    <label for="recipient-name" class="col-form-label">Name</label>
+                                                    <input type="text" class="form-control" id="recipient-name"
+                                                           name="playlist">
+                                                </div>
+                                            </form>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                    data-dismiss="modal">Close
+                                            </button>
+                                            <button type="Submit" class="btn btn-primary">Create Playlist</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
 
-                    <form method="post">
-                        {% csrf_token %}
-                        <select style="margin-left: 10px;width: 170px;" class="btn btn-success"
-                            onChange="form.submit();" name="playlist">
-                            <option selected="selected" disabled style="color: black;">Add to Playlist</option>
-                            {% if playlists %}
-                            {% for playlist in playlists %}
-                            <option value={{playlist.playlist_name}}>{{playlist.playlist_name}}</option>
-                            {% endfor %}
-                            {% endif %}
-                        </select>
-                    </form>
+                        <form method="post">
+                            {% csrf_token %}
+                            <select style="margin-left: 10px;width: 170px;" class="btn btn-success"
+                                    onChange="form.submit();" name="playlist">
+                                <option selected="selected" disabled style="color: black;">Add to Playlist</option>
+                                {% if playlists %}
+                                    {% for playlist in playlists %}
+                                        <option value={{ playlist.name }}>{{ playlist.name }}</option>
+                                    {% endfor %}
+                                {% endif %}
+                            </select>
+                        </form>
 
-                    <form method="post">
-                        {% csrf_token %}
-                        {% if is_favourite %}
-                        <span class="d-flex align-items-center mt-2 ml-2">
+                        <form method="post">
+                            {% csrf_token %}
+                            {% if is_favourite %}
+                                <span class="d-flex align-items-center mt-2 ml-2">
                             <!-- <i class="heart fa fa-heart my-auto"></i> -->
                             <button type="submit" name="rm-fav" class="btn btn-danger btn-block"
-                                style="width: 358px;margin-left:-8px;background-color: red;">Remove from Favourites</button>
+                                    style="width: 358px;margin-left:-8px;background-color: red;">Remove from Favourites</button>
                         </span>
-                        {% else %}
-                        <span class="d-flex align-items-center mt-2 ml-2">
+                            {% else %}
+                                <span class="d-flex align-items-center mt-2 ml-2">
                             <!-- <i class="heart fa fa-heart my-auto"></i> -->
                             <button type="submit" name="add-fav" class="btn btn-danger btn-block"
-                                style="width: 358px;margin-left:-8px;background-color: red;"><i class="heart fa fa-heart-o my-auto" style="color:white"></i> Add to Favourites</button>
+                                    style="width: 358px;margin-left:-8px;background-color: red;"><i
+                                    class="heart fa fa-heart-o my-auto"
+                                    style="color:white"></i> Add to Favourites</button>
 
-                            <!-- <input type="submit" id="favbtn" class="btn btn-primary" name="add-fav" value="Add to Favourites"> -->
+                                    <!-- <input type="submit" id="favbtn" class="btn btn-primary" name="add-fav" value="Add to Favourites"> -->
                         </span>
 
-                        {% endif %}
-                    </form>
+                            {% endif %}
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-{% if last_played %}
-    {% include 'footer.html' with song=last_played %}
-{% endif %}
+    {% if last_played %}
+        {% include 'footer.html' with song=last_played %}
+    {% endif %}
 
 {% endblock body %}
 
