--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="Description" content="Enter your description here" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>{% block title %}Base.html{% endblock title %}</title>
+    <title>{% block title %}Music Player{% endblock title %}</title>
         <style>
         .navbar {
             font-family: 'Source Code Pro', monospace;
